--- a/main.html
+++ b/main.html
@@ -8,6 +8,48 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<table class="table table-hover font-monospace table-responsive">
+
+		<caption class="text-primary" style="caption-side: top">List of all transactions</caption>
+
+		 <thead class="fw-bold table-dark">
+			<tr class="text-white">
+                <th class="fw-bold">#</th>
+				<th>From</th>
+				<th>To</th>
+				<th>Amount($)</th>
+			</tr>
+		 </thead>
+		 <tbody>
+			<tr class="table-active">
+                 <td class="fw-bold">1</td>
+				 <td>Mark</td>
+				 <td>Otto</td>
+				 <td>1000</td>
+			</tr>
+
+			<tr>
+                <td class="fw-bold">2</td>
+				<td>Jacob</td>
+				<td>Thornton</td>
+				<td>1500</td>
+			</tr>
+
+			<tr>
+                <td class="fw-bold">3</td>
+				<td>Jack</td>
+				<td>John</td>
+				<td>2000</td>
+			</tr>
+			<tfoot class="table-light">
+				<tr class="table-group-divider">
+					<td colspan="3" class="fw-bold text-end" id="total">Total 4000</td>
+				</tr>
+			</tfoot>
+			
+		 </tbody>
+	</table>
+
     <script type="text/javascript" src="./script.js">
 </script>
 
